@@ -1,3 +1,7 @@
+2011-01-25  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/powerpc32/invert_limb.asm: New file.
+
 2011-01-25 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/x86/pentium4/sse2/bdiv_q_1.asm: New file.
